<resources>
    <string name="app_name">OptaStats-Android</string>
    <string name="statistics_title">Statistics</string>
    <string name="player_name_title">PLAYER</string>
    <string name="player_name_title_2">NAME</string>
    <string name="player_weight_title">WEIGHT</string>
    <string name="player_biometry_title">BIOMETRY</string>
    <string name="player_goals_title">GOALS</string>
    <string name="player_pob_title">PLACE OF BIRTH</string>
    <string name="player_dob_title">DATE OF BIRTH</string>
    <string name="professional_team">PROFESSIONAL TEAM</string>
    <string name="americas_cup_title">TOURNAMENTS</string>
    <string name="height_title">HEIGHT</string>
    <string name="points_title">PTS</string>
    <string name="goals_against_title">GC</string>
    <string name="goals_for_title">G</string>
    <string name="drawn_title">D</string>
    <string name="lost_title">L</string>
    <string name="win_title">W</string>
    <string name="games_played">P</string>
    <string name="parameters_are_not_configured">Data is not available at this moment. Please, try later.</string>
    <string name="team_title">TEAM</string>
    <string name="avg_per_match_title">AVERAGE PER MATCH</string>
    <string name="goals_title">GOALS</string>
    <string name="goals_conceded">GOALS CONCEDED</string>
    <string name="possession">POSSESSION</string>
    <string name="pass_accuracy_title">PASS ACCURACY</string>
    <string name="initial_team_title">INITIAL TEAM</string>
    <string name="position_title">POSITION</string>
    <string name="this_info_is_not_available">This information will be available soon</string>
    <string name="completed_passes">COMPLETED PASSES</string>
    <string name="corners">CORNERS</string>
    <string name="shot_to_goal">SHOT TO GOAL</string>
    <string name="faults">FOULS</string>
    <string name="initial_team">INITIAL TEAM</string>
    <string name="reserves">RESERVES</string>
    <string name="coach">COACH</string>
    <string name="principal_referee">REFEREE</string>
    <string name="principal_asistants">ASSISTANTS</string>
    <string name="half_time">Half time</string>
    <string name="penalties">PENALTIES</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="midfielder">Midfielder</string>
    <string name="defender">Defender</string>
    <string name="defensive_midfielder">Defensive Midfielder</string>
    <string name="attacking_midfielder">Attacking Midfielder</string>
    <string name="attacker">Attacker</string>
    <string name="substitute">Substitute</string>
    <string name="striker">Striker</string>
    <string name="playing">Playing</string>
    <string name="played">Played</string>
    <string name="unknown">Unknown</string>
    <string name="btn_all_matches">All matches</string>
</resources>
